# timewall

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  codecov.yml  flake.nix  justfile  package.nix  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: build.yml  test.yml
data/: timewall.service
nix/: hm-module.nix  package.nix
src/: actions.rs  appearance.rs  cache.rs  cli.rs  config.rs  constants.rs  geo.rs  geoclue.rs  heic.rs  helpers.rs  info.rs  lib.rs  loader.rs  macros.rs  main.rs  metadata.rs  pidfile.rs  properties.rs  selection.rs  setter.rs  signals.rs  time.rs  wallpaper.rs  wallpaper_plist.rs
src/heif/: context.rs  convert.rs  mod.rs  read.rs
src/schedule/: appearance.rs  h24.rs  mod.rs  solar.rs  time.rs
src/wallpaper/: metadata.rs  mod.rs  properties.rs
tests/: clear.rs  common.rs  error.rs  info.rs  preview.rs  set.rs  unpack.rs  utils.rs
tests/examples/: properties_sun.xml  properties_time.xml  sun.heic  time.heic
