[package]
name = "timewall"
description = "All-in-one tool for Apple dynamic HEIF wallpapers on GNU/Linux"
version = "2.0.1"
edition = "2021"
authors = ["Bazyli Cyran <bazyli@cyran.dev>"]
categories = ["command-line-utilities", "multimedia::images"]
keywords = ["wallpaper", "dynamic-wallpaper", "heif"]
homepage = "https://github.com/bcyran/timewall"
repository = "https://github.com/bcyran/timewall.git"
readme = "README.md"
license = "MIT"
build = "build.rs"

[dependencies]
anyhow = "1.0.97"
async-io = "2.5.0"
base64 = "0.22.1"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
directories = "6.0.0"
env_logger = "0.11.6"
futures-lite = "2.6.0"
itertools = "0.14.0"
libheif-rs = { version = "2.2.0", default-features = false, features = ["v1_19"] }
log = "0.4.27"
nix = { version = "0.29.0", default-features = false, features = ["signal"] }
num_cpus = "1.17.0"
ordered-float = { version = "5.0.0", features = ["serde"] }
plist = "1.7.1"
png = "0.17.16"
seahash = "4.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
signal-hook = "0.3.18"
sun = "0.3.1"
threadpool = "1.8.1"
toml = "0.8.20"
wallpape-rs = "2.0.0"
xml-rs = "0.8.26"
zbus = "5.9.0"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
lazy_static = "1.5.0"
predicates = "3.1.2"
rstest = "0.17.0"

[build-dependencies]
clap = { version = "4.5.40", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
clap_complete = "4.5.52"
